# unified-intelligence-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONSTITUTION.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.cursor/rules/: project.mdc  python-integrator.mdc
.github/: copilot-instructions.md
.github/workflows/: validate.yml
.memory/: README.md  active.md  decisions.md  patterns.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
bridges/whatsapp-neonize/: cache_store.py  chat_search.py  ops_log.py  pyproject.toml  runtime_config.py  transcribe_cleanup.py  transcribe_model.py  worker.py
config/: hermes.example.yaml  hermes.service.example.yaml  integrator.docker.env  integrator.example.env
docs/: ADMIN.md  ADMIN_OPERACAO.md  ATIVIDADES_IMPLANTACAO.md  AVALIACAO_QUALIDADE_PERFORMANCE.md  CLI.md  COOLIFY.md  DOCKER.md  FASE2_VALIDACAO.md  LINKEDIN.md  LOGGING.md  PLANO_HERMES_OPERACOES.md  PLANO_LANGCHAIN_HERMES.md  WHATSAPP.md
event-ingestion-api/: .env.example  .flake8  .gitignore  README.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt
event-ingestion-api/deployment/: openapi-spec.yaml
event-ingestion-api/scripts/: validate-schema.sh
event-ingestion-api/src/: main.py
integrator/: __init__.py  agent_debug.py  config.py  logging_setup.py  ops_log.py  persistence.py
integrator/accounts/: __init__.py  registry.py
integrator/admin/: env_file.py  handlers.py  routes.py  runtime.py
integrator/auth/: google_oauth.py  google_oauth_web.py  linkedin_oauth.py
integrator/cli/: admin_hint.py  auth_login.py  main.py  operator_redirect.py  serve.py  ux.py  whatsapp.py
integrator/clients/: __init__.py  claude_desktop.py  mcp_setup.py
integrator/hermes/: __init__.py  config_merge.py  discovery.py  doctor.py  setup_cmd.py
integrator/mcp/: http_server.py  schema.py  server.py
scripts/: build-admin.sh  constitutional-check.sh  setup-local-agents.sh  validate.sh
tests/: test_accounts.py  test_admin_credentials.py  test_admin_handlers.py  test_admin_hint.py  test_admin_runtime.py  test_admin_whatsapp_snapshot.py  test_auth_errors.py  test_claude_desktop_config.py  test_cli_main.py  test_cli_operator_redirect.py  test_env_file_docker.py  test_google_calendar_extra.py  test_google_contacts_extra.py  test_google_gmail_extra.py  test_google_oauth_web.py  test_hermes_setup.py  test_http_server_auth.py  test_init_wizard.py  test_linkedin_oauth.py  test_linkedin_tools.py  test_logging.py  test_macos_service.py  test_mcp_clients_setup.py  test_mcp_input_schema.py  test_mcp_list_tools.py  test_mcp_phase2.py  test_ops_log.py  test_performance.py  test_persistence.py  test_preflight.py  test_schema.py  test_security_phase2.py  test_setup_script.py  test_setup_status.py  test_transcribe_cleanup.py  test_whatsapp_bridge_client.py  test_whatsapp_cache_store.py  test_whatsapp_chat_search.py  test_whatsapp_session_store.py  test_whatsapp_tools.py  (+2 more)
(+98 files in other folders)
